@@ -6,21 +6,22 @@ public class Examples {
 
     void example1() {
         System.out.println(
-                "abc\n" +
-                "def\n" +
-                "hig"
+                """
+                abc
+                def
+                hig"""
         );
     }
 
     void example2(Object obj) {
-        if (obj instanceof String && ((String) obj).length() > 10) {
+        if (obj instanceof String string && string.length() > 10) {
             // ...
         }
     }
 
     void example3(ArrayList<Integer> list) {
-        list.add(0, 123);
-        list.get(0);
+        list.addFirst(123);
+        list.getFirst();
     }
 
 }
